// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > SidebarListItem Matches snapshot when boolean prop "selected" is set to: "false" 1`] = `
<ForwardRef(styled.li)
  hasUser={
    Object {
      "handle": "jest-auto-snapshots String Fixture",
      "id": "jest-auto-snapshots String Fixture",
      "name": "jest-auto-snapshots String Fixture",
      "network": "facebook",
      "profileImageUrl": "jest-auto-snapshots String Fixture",
    }
  }
  onClick={[Function]}
  selected={false}
>
  <ForwardRef(styled.span)
    selected={false}
  >
    <NodeFixture />
  </ForwardRef(styled.span)>
  <ForwardRef(styled.div)>
    <React.Fragment>
      <Avatar
        alt="jest-auto-snapshots String Fixture"
        fallbackUrl=""
        isOnline={false}
        network="facebook"
        size="small"
        src="jest-auto-snapshots String Fixture"
        type="social"
      />
      <ForwardRef(styled.div)>
        <Text
          color="grayDarker"
          hasError={false}
          title="jest-auto-snapshots String Fixture"
          type="label"
        >
          jest-auto-snapshots String Fixture
        </Text>
        <ForwardRef(styled.span)
          selected={false}
        >
          jest-auto-snapshots String Fixture
        </ForwardRef(styled.span)>
      </ForwardRef(styled.div)>
    </React.Fragment>
  </ForwardRef(styled.div)>
  <ForwardRef(styled.span)
    selected={false}
  >
    1
  </ForwardRef(styled.span)>
</ForwardRef(styled.li)>
`;

exports[`jest-auto-snapshots > SidebarListItem Matches snapshot when passed all props 1`] = `
<ForwardRef(styled.li)
  hasUser={
    Object {
      "handle": "jest-auto-snapshots String Fixture",
      "id": "jest-auto-snapshots String Fixture",
      "name": "jest-auto-snapshots String Fixture",
      "network": "facebook",
      "profileImageUrl": "jest-auto-snapshots String Fixture",
    }
  }
  onClick={[Function]}
  selected={true}
>
  <ForwardRef(styled.span)
    selected={true}
  >
    <NodeFixture />
  </ForwardRef(styled.span)>
  <ForwardRef(styled.div)>
    <React.Fragment>
      <Avatar
        alt="jest-auto-snapshots String Fixture"
        fallbackUrl=""
        isOnline={false}
        network="facebook"
        size="small"
        src="jest-auto-snapshots String Fixture"
        type="social"
      />
      <ForwardRef(styled.div)>
        <Text
          color="white"
          hasError={false}
          title="jest-auto-snapshots String Fixture"
          type="label"
        >
          jest-auto-snapshots String Fixture
        </Text>
        <ForwardRef(styled.span)
          selected={true}
        >
          jest-auto-snapshots String Fixture
        </ForwardRef(styled.span)>
      </ForwardRef(styled.div)>
    </React.Fragment>
  </ForwardRef(styled.div)>
  <ForwardRef(styled.span)
    selected={true}
  >
    1
  </ForwardRef(styled.span)>
</ForwardRef(styled.li)>
`;

exports[`jest-auto-snapshots > SidebarListItem Matches snapshot when passed only required props 1`] = `
<ForwardRef(styled.li)
  hasUser={null}
  onClick={[Function]}
  selected={null}
>
  <ForwardRef(styled.div)>
    <Text
      color="grayDarker"
      hasError={false}
      title="jest-auto-snapshots String Fixture"
      type="label"
    >
      jest-auto-snapshots String Fixture
    </Text>
  </ForwardRef(styled.div)>
</ForwardRef(styled.li)>
`;
